goa_starter-calc
第一引数から第二引数を引くアプリ
http://localhost:8085/goa_starter-calc/19/4
