# gen/grpc/goa_starter_calc/server/types.go
@@ -1,0 +1,31 @@
+// Code generated by goa v3.4.3, DO NOT EDIT.
+//
+// goa_starter-calc gRPC server types
+//
+// Command:
+// $ goa gen goa_starter/design
+
+package server
+
+import (
+	goastartercalc "goa_starter/gen/goa_starter_calc"
+	goa_starter_calcpb "goa_starter/gen/grpc/goa_starter_calc/pb"
+)
+
+// NewAddPayload builds the payload of the "add" endpoint of the
+// "goa_starter-calc" service from the gRPC request type.
+func NewAddPayload(message *goa_starter_calcpb.AddRequest) *goastartercalc.AddPayload {
+	v := &goastartercalc.AddPayload{
+		C: int(message.C),
+		D: int(message.D),
+	}
+	return v
+}
+
+// NewAddResponse builds the gRPC response type from the result of the "add"
+// endpoint of the "goa_starter-calc" service.
+func NewAddResponse(result int) *goa_starter_calcpb.AddResponse {
+	message := &goa_starter_calcpb.AddResponse{}
+	message.Field = int32(result)
+	return message
+}
