# gen/grpc/term_limit/server/encode_decode.go
@@ -1,47 +1,0 @@
-// Code generated by goa v3.4.3, DO NOT EDIT.
-//
-// term_limit gRPC server encoders and decoders
-//
-// Command:
-// $ goa gen goa_starter/design
-
-package server
-
-import (
-	"context"
-	term_limitpb "goa_starter/gen/grpc/term_limit/pb"
-	termlimit "goa_starter/gen/term_limit"
-
-	goagrpc "goa.design/goa/v3/grpc"
-	"google.golang.org/grpc/metadata"
-)
-
-// EncodeAddResponse encodes responses from the "term_limit" service "add"
-// endpoint.
-func EncodeAddResponse(ctx context.Context, v interface{}, hdr, trlr *metadata.MD) (interface{}, error) {
-	result, ok := v.(int)
-	if !ok {
-		return nil, goagrpc.ErrInvalidType("term_limit", "add", "int", v)
-	}
-	resp := NewAddResponse(result)
-	return resp, nil
-}
-
-// DecodeAddRequest decodes requests sent to "term_limit" service "add"
-// endpoint.
-func DecodeAddRequest(ctx context.Context, v interface{}, md metadata.MD) (interface{}, error) {
-	var (
-		message *term_limitpb.AddRequest
-		ok      bool
-	)
-	{
-		if message, ok = v.(*term_limitpb.AddRequest); !ok {
-			return nil, goagrpc.ErrInvalidType("term_limit", "add", "*term_limitpb.AddRequest", v)
-		}
-	}
-	var payload *termlimit.AddPayload
-	{
-		payload = NewAddPayload(message)
-	}
-	return payload, nil
-}
