# gen/http/goa_starter_calc/server/paths.go
@@ -1,0 +1,17 @@
+// Code generated by goa v3.4.3, DO NOT EDIT.
+//
+// HTTP request path constructors for the goa_starter-calc service.
+//
+// Command:
+// $ goa gen goa_starter/design
+
+package server
+
+import (
+	"fmt"
+)
+
+// AddGoaStarterCalcPath returns the URL path to the goa_starter-calc service add HTTP endpoint.
+func AddGoaStarterCalcPath(c2 int, d int) string {
+	return fmt.Sprintf("/goa_starter-calc/%v/%v", c2, d)
+}
