# gen/http/openapi3.yaml
@@ -43,12 +43,12 @@ paths:
                 example: 7305426396677949776
                 format: int64
               example: 7905194824815223204
-  /term_limit/{c}/{d}:
+  /goa_starter-calc/{c}/{d}:
     get:
       tags:
-      - term_limit
-      summary: add term_limit
-      operationId: term_limit#add
+      - goa_starter-calc
+      summary: add goa_starter-calc
+      operationId: goa_starter-calc#add
       parameters:
       - name: c
         in: path
@@ -84,5 +84,5 @@ components: {}
 tags:
 - name: goa_starter
   description: The goa_starter service performs operations on numbers.
-- name: term_limit
-  description: The term_limit service performs operations on numbers.
+- name: goa_starter-calc
+  description: The goa_starter-calc service performs operations on numbers.
