# gen/http/term_limit/server/server.go
@@ -1,182 +1,0 @@
-// Code generated by goa v3.4.3, DO NOT EDIT.
-//
-// term_limit HTTP server
-//
-// Command:
-// $ goa gen goa_starter/design
-
-package server
-
-import (
-	"context"
-	termlimit "goa_starter/gen/term_limit"
-	"net/http"
-
-	goahttp "goa.design/goa/v3/http"
-	goa "goa.design/goa/v3/pkg"
-	"goa.design/plugins/v3/cors"
-)
-
-// Server lists the term_limit service endpoint HTTP handlers.
-type Server struct {
-	Mounts []*MountPoint
-	Add    http.Handler
-	CORS   http.Handler
-}
-
-// ErrorNamer is an interface implemented by generated error structs that
-// exposes the name of the error as defined in the design.
-type ErrorNamer interface {
-	ErrorName() string
-}
-
-// MountPoint holds information about the mounted endpoints.
-type MountPoint struct {
-	// Method is the name of the service method served by the mounted HTTP handler.
-	Method string
-	// Verb is the HTTP method used to match requests to the mounted handler.
-	Verb string
-	// Pattern is the HTTP request path pattern used to match requests to the
-	// mounted handler.
-	Pattern string
-}
-
-// New instantiates HTTP handlers for all the term_limit service endpoints
-// using the provided encoder and decoder. The handlers are mounted on the
-// given mux using the HTTP verb and path defined in the design. errhandler is
-// called whenever a response fails to be encoded. formatter is used to format
-// errors returned by the service methods prior to encoding. Both errhandler
-// and formatter are optional and can be nil.
-func New(
-	e *termlimit.Endpoints,
-	mux goahttp.Muxer,
-	decoder func(*http.Request) goahttp.Decoder,
-	encoder func(context.Context, http.ResponseWriter) goahttp.Encoder,
-	errhandler func(context.Context, http.ResponseWriter, error),
-	formatter func(err error) goahttp.Statuser,
-) *Server {
-	return &Server{
-		Mounts: []*MountPoint{
-			{"Add", "GET", "/term_limit/{c}/{d}"},
-			{"CORS", "OPTIONS", "/term_limit/{c}/{d}"},
-		},
-		Add:  NewAddHandler(e.Add, mux, decoder, encoder, errhandler, formatter),
-		CORS: NewCORSHandler(),
-	}
-}
-
-// Service returns the name of the service served.
-func (s *Server) Service() string { return "term_limit" }
-
-// Use wraps the server handlers with the given middleware.
-func (s *Server) Use(m func(http.Handler) http.Handler) {
-	s.Add = m(s.Add)
-	s.CORS = m(s.CORS)
-}
-
-// Mount configures the mux to serve the term_limit endpoints.
-func Mount(mux goahttp.Muxer, h *Server) {
-	MountAddHandler(mux, h.Add)
-	MountCORSHandler(mux, h.CORS)
-}
-
-// MountAddHandler configures the mux to serve the "term_limit" service "add"
-// endpoint.
-func MountAddHandler(mux goahttp.Muxer, h http.Handler) {
-	f, ok := HandleTermLimitOrigin(h).(http.HandlerFunc)
-	if !ok {
-		f = func(w http.ResponseWriter, r *http.Request) {
-			h.ServeHTTP(w, r)
-		}
-	}
-	mux.Handle("GET", "/term_limit/{c}/{d}", f)
-}
-
-// NewAddHandler creates a HTTP handler which loads the HTTP request and calls
-// the "term_limit" service "add" endpoint.
-func NewAddHandler(
-	endpoint goa.Endpoint,
-	mux goahttp.Muxer,
-	decoder func(*http.Request) goahttp.Decoder,
-	encoder func(context.Context, http.ResponseWriter) goahttp.Encoder,
-	errhandler func(context.Context, http.ResponseWriter, error),
-	formatter func(err error) goahttp.Statuser,
-) http.Handler {
-	var (
-		decodeRequest  = DecodeAddRequest(mux, decoder)
-		encodeResponse = EncodeAddResponse(encoder)
-		encodeError    = goahttp.ErrorEncoder(encoder, formatter)
-	)
-	return http.HandlerFunc(func(w http.ResponseWriter, r *http.Request) {
-		ctx := context.WithValue(r.Context(), goahttp.AcceptTypeKey, r.Header.Get("Accept"))
-		ctx = context.WithValue(ctx, goa.MethodKey, "add")
-		ctx = context.WithValue(ctx, goa.ServiceKey, "term_limit")
-		payload, err := decodeRequest(r)
-		if err != nil {
-			if err := encodeError(ctx, w, err); err != nil {
-				errhandler(ctx, w, err)
-			}
-			return
-		}
-		res, err := endpoint(ctx, payload)
-		if err != nil {
-			if err := encodeError(ctx, w, err); err != nil {
-				errhandler(ctx, w, err)
-			}
-			return
-		}
-		if err := encodeResponse(ctx, w, res); err != nil {
-			errhandler(ctx, w, err)
-		}
-	})
-}
-
-// MountCORSHandler configures the mux to serve the CORS endpoints for the
-// service term_limit.
-func MountCORSHandler(mux goahttp.Muxer, h http.Handler) {
-	h = HandleTermLimitOrigin(h)
-	f, ok := h.(http.HandlerFunc)
-	if !ok {
-		f = func(w http.ResponseWriter, r *http.Request) {
-			h.ServeHTTP(w, r)
-		}
-	}
-	mux.Handle("OPTIONS", "/term_limit/{c}/{d}", f)
-}
-
-// NewCORSHandler creates a HTTP handler which returns a simple 200 response.
-func NewCORSHandler() http.Handler {
-	return http.HandlerFunc(func(w http.ResponseWriter, r *http.Request) {
-		w.WriteHeader(200)
-	})
-}
-
-// HandleTermLimitOrigin applies the CORS response headers corresponding to the
-// origin for the service term_limit.
-func HandleTermLimitOrigin(h http.Handler) http.Handler {
-	origHndlr := h.(http.HandlerFunc)
-	return http.HandlerFunc(func(w http.ResponseWriter, r *http.Request) {
-		origin := r.Header.Get("Origin")
-		if origin == "" {
-			// Not a CORS request
-			origHndlr(w, r)
-			return
-		}
-		if cors.MatchOrigin(origin, "*") {
-			w.Header().Set("Access-Control-Allow-Origin", origin)
-			w.Header().Set("Vary", "Origin")
-			w.Header().Set("Access-Control-Expose-Headers", "Content-Type, Origin")
-			w.Header().Set("Access-Control-Max-Age", "100")
-			w.Header().Set("Access-Control-Allow-Credentials", "true")
-			if acrm := r.Header.Get("Access-Control-Request-Method"); acrm != "" {
-				// We are handling a preflight request
-				w.Header().Set("Access-Control-Allow-Methods", "GET")
-				w.Header().Set("Access-Control-Allow-Headers", "X-Authorization, X-Time, X-Api-Version, Content-Type, Origin, Authorization")
-			}
-			origHndlr(w, r)
-			return
-		}
-		origHndlr(w, r)
-		return
-	})
-}
